chore(cache): no-store sur HTML via Netlify headers et revalidate=0 pour la home

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,19 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
+
+[[headers]]
+  for = "/"
+  [headers.values]
+    Cache-Control = "no-store, no-cache, must-revalidate, max-age=0"
+
+[[headers]]
+  for = "/index.html"
+  [headers.values]
+    Cache-Control = "no-store, no-cache, must-revalidate, max-age=0"
+
+[[headers]]
+  for = "/_next/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
